--- a/zahlenmauer.html
+++ b/zahlenmauer.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="zahlenmauer.js"></script>
     <script src="raphael-min.js"></script>
+    <script src="rref.js"></script>
+    <script type="text/javascript" src="zahlenmauer.js"></script>
   </head>
   <body onload="init();">
     <h1>Zahlenmauer</h1>
