Adding functional download buttons for both svg.

--- a/zahlenmauer.html
+++ b/zahlenmauer.html
@@ -12,15 +12,20 @@
     leer bleiben soll.</p>
     <textarea rows="7" cols="80" id="sourcecode">
 14
-?, 9
-2, ?, ?
+?, ?
+5, ?, 3
+?, 1, ?, ?
     </textarea>
-    <span id="configuration">
+    <!--    <span id="configuration">
       <p>Hier werden später weitere Konfigurationsmöglichkeiten geboten.</p>
-    </span>
-    <div id="output-problem">
+    </span> -->
+    <div style="float:left">
+      <div id="output-problem"></div>
+      <a href="javascript:startDownload('output-problem');">Herunterladen</a>
     </div>
-    <div id="output-solution">
+    <div>
+      <div id="output-solution"></div>
+      <a href="javascript:startDownload('output-solution');">Herunterladen</a>
     </div>
   </body>
 </html>
