--- a/zahlenmauer.html
+++ b/zahlenmauer.html
@@ -10,11 +10,19 @@
     <p>Geben sie hier die Daten für eine Zahlenmauer ein, diese wird
     sammt Lösung als SVG generiert. Ein „?“ zeigt an, dass das Feld
     leer bleiben soll.</p>
-    <textarea rows="7" cols="80" id="sourcecode">
-14
+    <p style="font-size:80%">Beachten Sie, dass nur bis zu 4 binäre Nachkommastellen zugelassen
+    sind. Dies entspricht einer Genauigkeit von einem Sechzehntel.
+    Dies war notwendig, um Rundungsfehler zu vermeiden. Bekannter Fehler: Bei
+    großen, überbestimmten Mauern kann manchmal durch 0 geteilt werden. Dies
+    verhindert die Berechnund der Lösung.</p>
+    <textarea rows="9" cols="80" id="sourcecode" onkeyup="refreshOutput();">
+100
 ?, ?
-5, ?, 3
-?, 1, ?, ?
+5, ?, ?
+?, ?, ?, ?
+?, ?, 20, ?, ?
+16, ?, ?, ?, 3, ?
+?, 4, ?, ?, 3, ?, ?
     </textarea>
     <hr/>
     <!--    <span id="configuration">
