Fix two spelling mistakes.

--- a/zahlenmauer.html
+++ b/zahlenmauer.html
@@ -7,14 +7,14 @@
   </head>
   <body onload="init();">
     <h1>Zahlenmauer</h1>
-    <p>Geben sie hier die Daten für eine Zahlenmauer ein, diese wird
+    <p>Geben Sie hier die Daten für eine Zahlenmauer ein, diese wird
     sammt Lösung als SVG generiert. Ein „?“ zeigt an, dass das Feld
     leer bleiben soll.</p>
     <p style="font-size:80%">Beachten Sie, dass nur bis zu 4 binäre Nachkommastellen zugelassen
     sind. Dies entspricht einer Genauigkeit von einem Sechzehntel.
     Dies war notwendig, um Rundungsfehler zu vermeiden. Bekannter Fehler: Bei
     großen, überbestimmten Mauern kann manchmal durch 0 geteilt werden. Dies
-    verhindert die Berechnund der Lösung.</p>
+    verhindert die Berechnung der Lösung.</p>
     <textarea rows="9" cols="80" id="sourcecode" onkeyup="refreshOutput();">
 100
 ?, ?
