Implementing downloads for the bootstrap rewrite. Makes use of the fileSaver library.

--- a/Zahlenpyramide.htm
+++ b/Zahlenpyramide.htm
@@ -131,6 +131,7 @@
     <script src="bootstrap/ie10-viewport-bug-workaround.js"></script>
 
     <!-- The SVG Generator application -->
+    <script src="libs/FileSaver.min.js"></script>
     <script src="application.js"></script>
     <script src="raphael-min.js"></script>
     <!-- The specific code for this particular generator -->
