Adding basic error reporting.

--- a/Zahlenpyramide.htm
+++ b/Zahlenpyramide.htm
@@ -69,14 +69,7 @@
 ?, ?, ?, 1</textarea>
     </div>
 
-    <div style="display:none">
-    <div class="alert alert-warning" role="alert">
-        <strong>Warning!</strong> Best check yo self, you're not looking too good.
-      </div>
-      <div class="alert alert-danger" role="alert">
-        <strong>Oh snap!</strong> Change a few things up and try submitting again.
-      </div>
-    </div>
+    <div id="stderr"></div>
 
     <div class="row">
         <div class="col-sm-6">
