--- a/about.htm
+++ b/about.htm
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!--    <link rel="icon" href="http://getbootstrap.com/favicon.ico"> -->
 
-    <title>Zahlenpyramiden – SVG Generator</title>
+    <title>SVG Generator - Über das Projekt</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/bootstrap.css" rel="stylesheet">
@@ -41,9 +41,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Zahlenpyramide</a></li>
-            <li><a href="about.htm">About</a></li>
-            <li><a href="contact.htm">Contact</a></li>
+            <li><a href="index.htm">Startseite</a></li>
+            <li class="active"><a href="#">Über das Projekt</a></li>
          </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -53,37 +52,22 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Zahlenmauer</h1>
-        <p>Geben Sie hier die Daten für eine Zahlenmauer ein, diese wird
-           sammt Lösung als SVG generiert. Ein „?“ zeigt an, dass das Feld
-           leer bleiben soll.</p>
+        <h1>SVG Generator</h1>
+        <p>Lorem Ipsum.</p>
       </div>
-
-    <div class="form-group">
-      <label for="exampleInputEmail1">Inhalt der Zahlenmauer als Text.</label>
-      <textarea type="text" class="form-control application-input" rows="6"
-          id="sourcecode" placeholder="Pyramide eingeben.">
-14
-?, ?
-5, 3, ?
-?, ?, ?, 1</textarea>
-    </div>
-
-    <div id="stderr"></div>
 
     <div class="row">
         <div class="col-sm-6">
           <div class="panel panel-default">
              <div class="panel-heading">
                <h3 class="panel-title">
-                 <a href="output-problem" class="application-download">
-                   <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                   Problemstellung
+                 <a href="zahlenmauer.htm" class="application-download">
+                   Zahlenmauer
                 </a>
               </h3>
             </div>
            <div class="panel-body">
-              <div id="output-problem" class="application-output"></div>
+               <p>Bla bla.</p>
             </div>
           </div>
         </div>
@@ -104,13 +88,6 @@
         </div>
     </div>
 
-    <div class="input-group">
-      <span class="input-group-addon" id="basic-addon1">
-        <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-      </span>
-      <input type="text" class="form-control" id="application-static-link" placeholder="Statischer Link" aria-describedby="basic-addon1" readonly="readonly" />
-    </div>
-
     </div> <!-- /container -->
 
 
@@ -122,13 +99,5 @@
     <script src="bootstrap/docs.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="bootstrap/ie10-viewport-bug-workaround.js"></script>
-
-    <!-- The SVG Generator application -->
-    <script src="libs/FileSaver.min.js"></script>
-    <script src="application.js"></script>
-    <script src="raphael-min.js"></script>
-    <!-- The specific code for this particular generator -->
-    <script src="rref.js"></script>
-    <script src="zahlenpyramide.js"></script>
 
 </body></html>
