Writing the about.htm page.

--- a/about.htm
+++ b/about.htm
@@ -52,42 +52,25 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>SVG Generator</h1>
-        <p>Lorem Ipsum.</p>
+        <h1>Über das Projekt</h1>
+        <p>Der SVG Generator ist ein Projekt von Rolf Sievers mit dem Ziel, das
+        Erstellen von standardisierten Aufgabentypen zu erleichtern. Insbesondere
+        soll dies möglich werden, ohne ein Grafikprogramm verwenden zu müssen.</p>
+        <p>Die primäre Zielgruppe ist das Grundschulaufgabenteam des Vereins
+        <a href="http://mo-ni.de">MoNi</a>, welcher sich um die Durchführung
+        der Mathematik-Olympiade in Niedersaches kümmert.</p>
+        <p>Dieses Projekt wird nicht von MoNi getragen, sondern
+        von mir privat entwicklet. Für Fehlermeldungen und Anregungen erreichen Sie
+        mich am besten über meinen Github account <a href="https://github.com/roSievers">roSievers</a> oder per Mail
+        an rolf.sievers beim deutschen Anbieter Posteo.</p>
+
+        <p>Das Projekt ist möglich durch freie Bibliotheken, hierbei handelt es sich um
+        <a href="http://getbootstrap.com/">Bootstrap</a>,
+        <a href="https://github.com/eligrey/FileSaver.js">FileSaver</a> und
+        <a href="http://raphaeljs.com/">Raphaël</a>, welche alle unter der MIT- oder einer ähnlichen Lizenz
+        verfügbar sind. <a href="https://github.com/roSievers/svgGenerator">Der Code dieses Projekts</a>
+        steht ebenfalls unter der MIT Lizenz.</p>
       </div>
-
-    <div class="row">
-        <div class="col-sm-6">
-          <div class="panel panel-default">
-             <div class="panel-heading">
-               <h3 class="panel-title">
-                 <a href="zahlenmauer.htm" class="application-download">
-                   Zahlenmauer
-                </a>
-              </h3>
-            </div>
-           <div class="panel-body">
-               <p>Bla bla.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">
-                <a href="output-solution" class="application-download">
-                  <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                  Musterlösung
-               </a>
-             </h3>
-           </div>
-           <div class="panel-body">
-             <div id="output-solution" class="application-output"></div>
-           </div>
-         </div>
-        </div>
-    </div>
-
     </div> <!-- /container -->
 
 
