Spelling fixes, adding Glyphicon reference.

--- a/about.htm
+++ b/about.htm
@@ -58,10 +58,10 @@
         soll dies möglich werden, ohne ein Grafikprogramm verwenden zu müssen.</p>
         <p>Die primäre Zielgruppe ist das Grundschulaufgabenteam des Vereins
         <a href="http://mo-ni.de">MoNi</a>, welcher sich um die Durchführung
-        der Mathematik-Olympiade in Niedersaches kümmert.</p>
+        der Mathematik-Olympiade in Niedersachsen kümmert.</p>
         <p>Dieses Projekt wird nicht von MoNi getragen, sondern
-        von mir privat entwicklet. Für Fehlermeldungen und Anregungen erreichen Sie
-        mich am besten über meinen Github account <a href="https://github.com/roSievers">roSievers</a> oder per Mail
+        von mir privat entwickelt. Für Fehlermeldungen und Anregungen erreichen Sie
+        mich am besten über meinen Github Account <a href="https://github.com/roSievers">roSievers</a> oder per Mail
         an rolf.sievers beim deutschen Anbieter Posteo.</p>
 
         <p>Das Projekt ist möglich durch freie Bibliotheken, hierbei handelt es sich um
@@ -70,6 +70,9 @@
         <a href="http://raphaeljs.com/">Raphaël</a>, welche alle unter der MIT- oder einer ähnlichen Lizenz
         verfügbar sind. <a href="https://github.com/roSievers/svgGenerator">Der Code dieses Projekts</a>
         steht ebenfalls unter der MIT Lizenz.</p>
+
+        <p>Bei den verwendeten Icons handelt es sich um <a href="http://glyphicons.com/">Glyphicon Halflings</a>.
+        Diese sind <strong>nicht frei</strong>, können aber zusammen mit Bootstrap kostenfrei verwendet werden.</p>
       </div>
     </div> <!-- /container -->
 
