Writing the introduction in index.htm.

--- a/index.htm
+++ b/index.htm
@@ -53,36 +53,52 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>SVG Generator</h1>
-        <p>Lorem Ipsum.</p>
+        <p>Lassen Sie sich die notwendigen Grafiken für typische Mathematikaufgaben auf
+        Grundschulniveau generieren. Hierzu ist keine Kenntnis von irgendwelchen
+        Grafikprogrammen notwendig.</p>
+        <p>Die Sammlung von Generatoren ist derzeit leider recht klein, hoffentlich wird
+        dies in Zukunft aber erweitert.</p>
       </div>
 
-    <div class="row">
-        <div class="col-sm-6">
+      <div class="row">
+        <div class="col-sm-4">
           <div class="panel panel-default">
              <div class="panel-heading">
                <h3 class="panel-title">
-                 <a href="zahlenmauer.htm" class="application-download">
-                   Zahlenmauer
-                </a>
+                    <a href="zahlenmauer.htm">
+                   Zahlenmauer</a>
               </h3>
             </div>
            <div class="panel-body">
-               <p>Bla bla.</p>
+               <img src="img/example-zahlenmauer.svg" alt="Ein Vorschaubild einer ausgefüllten Zahlenmauer." />
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">
-                <a href="output-solution" class="application-download">
-                  <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                  Musterlösung
+                <a href="#">
+                  Beispielcontainer
                </a>
              </h3>
            </div>
            <div class="panel-body">
-             <div id="output-solution" class="application-output"></div>
+               <p>Lorem Ipsum</p>
+           </div>
+         </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">
+                <a href="#">
+                  Beispielcontainer
+               </a>
+             </h3>
+           </div>
+           <div class="panel-body">
+               <p>Lorem Ipsum</p>
            </div>
          </div>
         </div>
