Add the sha1 library to the credits in about.htm.

--- a/about.htm
+++ b/about.htm
@@ -66,6 +66,7 @@
 
         <p>Das Projekt ist möglich durch freie Bibliotheken, hierbei handelt es sich um
         <a href="http://getbootstrap.com/">Bootstrap</a>,
+        eine sha1 Implementation von <a href="http://www.movable-type.co.uk/scripts/sha1.html">Chris Venes</a>,
         <a href="https://github.com/eligrey/FileSaver.js">FileSaver</a> und
         <a href="http://raphaeljs.com/">Raphaël</a>, welche alle unter der MIT- oder einer ähnlichen Lizenz
         verfügbar sind. <a href="https://github.com/roSievers/svgGenerator">Der Code dieses Projekts</a>
