Error handling is now monadic.

--- a/zahlenmauer.htm
+++ b/zahlenmauer.htm
@@ -126,6 +126,7 @@
     <!-- The SVG Generator application -->
     <script src="libs/FileSaver.min.js"></script>
     <script src="libs/sha1.min.js"></script>
+    <SCRIPT src="libs/merror.js"></script>
     <script src="application.js"></script>
     <script src="raphael-min.js"></script>
     <!-- The specific code for this particular generator -->
