--- a/zahlenmauer.htm
+++ b/zahlenmauer.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,93 +24,101 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body role="document">
-
+<body role="document">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">SVG Generator</a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">SVG Generator</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.htm">Startseite</a></li>
+                    <li class="active"><a href="#">Zahlenmauer</a></li>
+                    <li><a href="about.htm">Über das Projekt</a></li>
+               </ul>
+            </div><!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.htm">Startseite</a></li>
-            <li class="active"><a href="#">Zahlenmauer</a></li>
-            <li><a href="about.htm">Über das Projekt</a></li>
-         </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
     <div class="container theme-showcase" role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Zahlenmauer</h1>
-        <p>Geben Sie hier die Daten für eine Zahlenmauer ein, diese wird
-           sammt Lösung als SVG generiert. Ein „?“ zeigt an, dass das Feld
-           leer bleiben soll.</p>
-      </div>
+        <!-- Der einleitende und erklärende Text -->
+        <div class="jumbotron">
+            <h1>Zahlenmauer</h1>
+            <p>Geben Sie hier die Daten für eine Zahlenmauer ein, diese wird
+               sammt Lösung als SVG generiert. Ein „?“ zeigt an, dass das Feld
+               leer bleiben soll.</p>
+        </div>
 
-    <div class="form-group">
-      <label for="exampleInputEmail1">Inhalt der Zahlenmauer als Text.</label>
-      <textarea type="text" class="form-control application-input" rows="6"
-          id="sourcecode" placeholder="Pyramide eingeben.">
+
+        <!-- Eingabefeld -->
+        <div class="form-group">
+            <label for="exampleInputEmail1">Inhalt der Zahlenmauer als Text.</label>
+            <textarea type="text" class="form-control application-input" rows="6"
+                      id="sourcecode" placeholder="Pyramide eingeben.">
 14
 ?, ?
 5, 3, ?
 ?, ?, ?, 1</textarea>
-    </div>
-
-    <div id="stderr"></div>
-
-    <div class="row">
-        <div class="col-sm-6">
-          <div class="panel panel-default">
-             <div class="panel-heading">
-               <h3 class="panel-title">
-                 <a href="zahlenmauer" class="application-download">
-                   <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                   Problemstellung
-                </a>
-              </h3>
-            </div>
-           <div class="panel-body">
-              <div id="zahlenmauer" class="application-output"></div>
-            </div>
-          </div>
         </div>
-        <div class="col-sm-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">
-                <a href="zahlenmauer-lsg" class="application-download">
-                  <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                  Musterlösung
-               </a>
-             </h3>
-           </div>
-           <div class="panel-body">
-             <div id="zahlenmauer-lsg" class="application-output"></div>
-           </div>
-         </div>
-        </div>
-    </div>
 
-    <div class="input-group">
-      <span class="input-group-addon" id="basic-addon1">
-        <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-      </span>
-      <input type="text" class="form-control" id="application-static-link" placeholder="Statischer Link" aria-describedby="basic-addon1" readonly="readonly" />
-    </div>
+
+        <!-- Platz an dem Fehlermeldungen auftauchen -->
+        <div id="stderr"></div>
+
+
+        <!-- Die Ausgabe der Bilder -->
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <a href="zahlenmauer" class="application-download">
+                                <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                                Problemstellung
+                            </a>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <div id="zahlenmauer" class="application-output"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <a href="zahlenmauer-lsg" class="application-download">
+                                <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                                Musterlösung
+                            </a>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <div id="zahlenmauer-lsg" class="application-output"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Hier folgt der Downloadlink -->
+        <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">
+                <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+            </span>
+            <input type="text" class="form-control" id="application-static-link" placeholder="Statischer Link" aria-describedby="basic-addon1" readonly="readonly" />
+        </div>
 
     </div> <!-- /container -->
 
@@ -126,7 +135,7 @@
     <!-- The SVG Generator application -->
     <script src="libs/FileSaver.min.js"></script>
     <script src="libs/sha1.min.js"></script>
-    <SCRIPT src="libs/merror.js"></script>
+    <script src="libs/merror.js"></script>
     <script src="application.js"></script>
     <script src="raphael-min.js"></script>
     <!-- The specific code for this particular generator -->
