Reference the Github projet in the about page.

--- a/about.htm
+++ b/about.htm
@@ -60,8 +60,9 @@
         <a href="http://mo-ni.de">MoNi</a>, welcher sich um die Durchführung
         der Mathematik-Olympiade in Niedersachsen kümmert.</p>
         <p>Dieses Projekt wird nicht von MoNi getragen, sondern
-        von mir privat entwickelt. Für Fehlermeldungen und Anregungen erreichen Sie
-        mich am besten über meinen Github Account <a href="https://github.com/roSievers">roSievers</a> oder per Mail
+        von mir privat entwickelt. <a href="https://github.com/roSievers/svgGenerator"> Fehlermeldungen
+        und Anregungen</a> können Sie
+        am besten über Github mitteilen, oder per Mail
         an rolf.sievers beim deutschen Anbieter Posteo.</p>
 
         <p>Das Projekt ist möglich durch freie Bibliotheken, hierbei handelt es sich um
